--- a/devtainan/index.html
+++ b/devtainan/index.html
@@ -9,7 +9,7 @@
 <body ng-app="myNoteApp" ng-controller="myNoteCtrl">
 
     <h2>My Note </h2>
-
+    <h4>Use GitHub to publish</h4>
 
     <textarea ng-model="message" cols="40" rows="10"></textarea>
 
